syntax = "proto3";

option csharp_namespace = "Proto.Command.TimeSlots";

import "google/protobuf/timestamp.proto";

service TimeSlotCommandService {
  rpc CreateTimeSlot(CreateTimeSlotCommand) returns (CommandResponse);
  rpc AddNote (AddNoteCommand) returns (CommandResponse);
  rpc SetStartTime (SetStartTimeCommand) returns (CommandResponse);
  rpc SetEndTime (SetEndTimeCommand) returns (CommandResponse);
}

message AddNoteCommand {
  string time_slot_id = 1;
  string note_id = 2;
}

message CreateTimeSlotCommand {
  string time_slot_id = 1;
  string selected_ticket_id = 2;
  string work_day_id = 3;
  google.protobuf.Timestamp start_time = 4;
  google.protobuf.Timestamp end_time = 5;
  bool is_timer_running = 6;
}

message SetEndTimeCommand {
  string time_slot_id = 1;
  google.protobuf.Timestamp time = 2;
}

message SetStartTimeCommand {
  string time_slot_id = 1;
  google.protobuf.Timestamp time = 2;
}

message CommandResponse {
  bool success = 1;
}